<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:id="@+id/title"
        style="@style/FCLCrashTitle"
        android:text="@string/crash_reporter_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintWidth_percent="0.7">

        <com.tungsten.fcllibrary.component.view.FCLTextView
            android:id="@+id/error"
            style="@style/FCLCrashErrorText" />

    </ScrollView>

    <View
        android:id="@+id/split"
        style="@style/FCLCrashSplitLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:id="@+id/hint"
        style="@style/FCLCrashSidebarTitle"
        android:text="@string/crash_reporter_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/split"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tungsten.fcllibrary.component.view.FCLProgressBar
        android:id="@+id/progress"
        style="@style/FCLCrashProgressBar"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/split"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/restart"
        style="@style/FCLCrashButton"
        android:text="@string/crash_reporter_restart"
        app:layout_constraintBottom_toTopOf="@+id/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/split" />

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/close"
        style="@style/FCLCrashButton"
        android:text="@string/crash_reporter_close"
        app:layout_constraintBottom_toTopOf="@+id/copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/split" />

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/copy"
        style="@style/FCLCrashButton"
        android:text="@string/crash_reporter_copy"
        app:layout_constraintBottom_toTopOf="@+id/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/split" />

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/upload"
        style="@style/FCLCrashButton"
        android:text="@string/crash_reporter_upload"
        app:layout_constraintBottom_toTopOf="@+id/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/split" />

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/share"
        style="@style/FCLCrashButton"
        android:layout_marginBottom="0dp"
        android:text="@string/crash_reporter_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/split" />

</androidx.constraintlayout.widget.ConstraintLayout>