<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.tungsten.fcllibrary.component.view.FCLTitleView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/back"
        app:auto_padding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/file_browser_back"
        android:layout_marginStart="10dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/close"
        app:auto_padding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/file_browser_close"
        android:layout_marginStart="10dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:singleLine="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:auto_text_tint="true"
        android:layout_marginTop="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/current_folder"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <ListView
        android:id="@+id/list"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_folder"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/split"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/list"/>

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/shared_dir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/close"
        app:layout_constraintStart_toEndOf="@+id/split"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/file_browser_shared"/>

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/private_dir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/shared_dir"
        app:layout_constraintStart_toEndOf="@+id/split"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/file_browser_private"/>

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:id="@+id/mode_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/file_browser_mode"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/type_hint"
        app:layout_constraintStart_toEndOf="@+id/split"/>

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:id="@+id/mode"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/type"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:id="@+id/type_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/file_browser_selection"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm"
        app:layout_constraintStart_toEndOf="@+id/split"/>

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:id="@+id/type"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/split"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/file_browser_positive"/>

</androidx.constraintlayout.widget.ConstraintLayout>